# jacobian-visual-servo

./: .gitignore  .gitmodules  README.md
apriltag_ros/apriltag_ros/config/: tags.yaml
apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
apriltag_utils/: CMakeLists.txt  package.xml
apriltag_utils/config/: apriltag_visualization.rviz  intrinsics.txt
apriltag_utils/launch/: caminfo_pub.launch  utils.launch
apriltag_utils/src/: ee_pose_publisher.cpp
camera_info_publisher/: CMakeLists.txt  package.xml
camera_info_publisher/launch/: caminfo_pub.launch
camera_info_publisher/src/: camera_info_publisher.cpp
jacobian-visual-servo/: CMakeLists.txt  package.xml
jacobian-visual-servo/include/jacobian_visual_servo/: kdc_utils.hpp  servo_node.hpp  uncertain_IK_server.hpp  uncertain_IK_server_ros.h
jacobian-visual-servo/launch/: snake_6.launch
jacobian-visual-servo/scripts/: snake_6_mapper.py
jacobian-visual-servo/src/: kdc_utils.cpp  servo_node.cpp  uncertain_IK_server.cpp  uncertain_IK_server_ros.cpp
vrep/: camera.lua  snake_arm.lua  target_sphere.lua
